# trestle-transport

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  README.md  pyproject.toml  pyrightconfig.json  renovate.json  ruff.toml  sonar-project.properties  tox.ini  trestle-coordinator-core.code-workspace  trestle.repo.json
.github/workflows/: ci.yml  trestle-quality.yml
.trestle/: standards.version
docs/: API.md  ARCHITECTURE.md
scripts/: run_sonar.sh  validate_standards.sh
tests/: __init__.py  conftest.py  test_adapter_boundary.py  test_decision_attention.py  test_decision_realization_intent.py  test_decision_selection.py  test_http_orphan_recovery.py  test_http_unpair.py  test_profile_policy.py  test_session.py  test_trace.py  test_trace_emitter.py  test_weather_domain.py  test_ws_client.py
trestle_coordinator_core/: __init__.py  adapter.py  errors.py  http.py  policy_engine.py  profile.py  protobuf_util.py  protocol.py  session.py  trace.py  trace_emitter.py  trestle_pb2.py  trestle_pb2.pyi  ws.py  ws_client.py
trestle_coordinator_core/decision/: __init__.py  attention.py  frames.py  realization.py  realization_intent.py  selection.py
trestle_coordinator_core/domains/: __init__.py  weather.py
trestle_coordinator_core/transport/: __init__.py  http.py  protobuf_util.py  protocol.py  session.py  trestle_pb2.py  trestle_pb2.pyi  ws.py  ws_client.py
trestle_transport/: __init__.py  errors.py  http.py  protocol.py  ws.py  ws_client.py
