[build-system]
requires = ["hatchling>=1.24.2"]
build-backend = "hatchling.build"

[project]
name = "trestle-coordinator-core"
version = "0.1.0"
description = "Shared coordinator core providing transport, protocol helpers, and canonical envelope tooling."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "RockBridge Trestle" }
]
keywords = ["trestle", "coordinator", "transport", "websocket", "home-assistant"]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "websockets>=14.0",
]

[tool.hatch.build.targets.wheel]
packages = ["trestle_coordinator_core"]
