[build-system]
requires = ["hatchling>=1.24.2"]
build-backend = "hatchling.build"

[project]
name = "trestle-coordinator-core"
version = "0.1.0"
description = "Shared coordinator core providing transport, protocol helpers, and canonical envelope tooling."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "RockBridge Trestle" }
]
keywords = ["trestle", "coordinator", "transport", "websocket", "home-assistant"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Home Automation",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
dependencies = [
  "websockets>=14.0",
]

[project.urls]
Homepage = "https://github.com/tjcav/trestle-transport"
Documentation = "https://github.com/tjcav/trestle-spec"
Repository = "https://github.com/tjcav/trestle-transport"
Issues = "https://github.com/tjcav/trestle-transport/issues"
Changelog = "https://github.com/tjcav/trestle-transport/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0",
  "pytest-asyncio>=0.21.0",
  "pytest-cov>=4.1.0",
  "pytest-testmon>=2.1.0",
  "ruff>=0.8.4",
  "mypy>=1.8.0",
  "bandit>=1.7.6",
  "pre-commit>=3.6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["trestle_coordinator_core"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
  "req(id, description): Traceability marker for behavior/ICD requirements",
]

[tool.coverage.run]
source = ["trestle_coordinator_core"]
omit = [
    "*/tests/*",
    "*/trestle_pb2.py",
    "*/trestle_pb2.pyi",
]

[tool.coverage.report]
fail_under = 90
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips = ["B101", "B110"]  # Allow assert in tests, allow try-except-pass (task cancellation)

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true
exclude = [
    ".*trestle_pb2\\.py$",
    ".*trestle_pb2\\.pyi$",
    "tests",
]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_untyped_calls = false
disallow_incomplete_defs = false

[[tool.mypy.overrides]]
module = "trestle_coordinator_core.transport.trestle_pb2"
ignore_errors = true

[[tool.mypy.overrides]]
module = "trestle_coordinator_core.transport.protobuf_util"
ignore_errors = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true
